crates/kaban-parser/tests/snapshots/statements__enum_decl_with_no_variants.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: enum Empty {}

Block [
    EnumDeclWithNoGeneric {
        is_pub: false,
        name: Identifier("Empty"),
        variant_decls: [],
    },
]
