crates/kaban-parser/tests/snapshots/statements__func_decl_with_generic_and_self_param.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: func foo<T>(self&, x: T) -> T { return x; }

Block [
    FuncDeclWithGeneric {
        is_pub: false,
        name: Identifier("foo"),
        params: [
            SelfParam(
                Ampersand("&"),
            ),
            Param {
                binding: IdentifierBinding {
                    name: Identifier("x"),
                    mutable: false,
                },
                type: NamedType(
                    Identifier("T"),
                ),
            },
        ],
        generic_params: [
            GenericParam {
                name: Identifier("T"),
            },
        ],
        return_type: NamedType(
            Identifier("T"),
        ),
        body: Block [
            Return(
                Identifier("x"),
            ),
        ],
    },
]
